Praca donowa d6 po sugestii od Mentorki

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,12 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/ChallengeApp/ChallengeApp/Employee3.cs
+/ChallengeApp/ChallengeApp/Employee2.cs
+/ChallengeApp/ChallengeApp/Employee1.cs
+/ChallengeApp/ChallengeApp/Employee3.cs
+/ChallengeApp/ChallengeApp/Employee3.cs
+/ChallengeApp/ChallengeApp/Employee2.cs
+/ChallengeApp/ChallengeApp/Employee1.cs
+/ChallengeApp/ChallengeApp/Employee3.cs
+/ChallengeApp/ChallengeApp/Employee3.cs
